Implemented Listener in all the actions required over the model. Fixed some inconsistencies related to test classes.