@@ -3,31 +3,25 @@ package it.polimi.ingsw.gc12.Controller.ServerController.GameStates;
 import com.google.gson.reflect.TypeToken;
 import it.polimi.ingsw.gc12.Controller.ServerController.GameController;
 import it.polimi.ingsw.gc12.Controller.ServerController.ServerController;
-import it.polimi.ingsw.gc12.Listeners.Listener;
+import it.polimi.ingsw.gc12.Controller.ServerController.ServerControllerTest;
 import it.polimi.ingsw.gc12.Model.Cards.GoldCard;
 import it.polimi.ingsw.gc12.Model.Cards.InitialCard;
 import it.polimi.ingsw.gc12.Model.Cards.ObjectiveCard;
 import it.polimi.ingsw.gc12.Model.Cards.ResourceCard;
 import it.polimi.ingsw.gc12.Model.Game;
-import it.polimi.ingsw.gc12.Model.InGamePlayer;
 import it.polimi.ingsw.gc12.Model.Lobby;
 import it.polimi.ingsw.gc12.Model.Player;
 import it.polimi.ingsw.gc12.Network.NetworkSession;
-import it.polimi.ingsw.gc12.Utilities.Exceptions.UnexpectedPlayerException;
 import it.polimi.ingsw.gc12.Utilities.GenericPair;
 import it.polimi.ingsw.gc12.Utilities.JSONParser;
 import it.polimi.ingsw.gc12.Utilities.Side;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Map;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertInstanceOf;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static it.polimi.ingsw.gc12.Controller.ServerController.ServerControllerTest.createNetworkSessionStub;
 
 class PlayerTurnPlayStateTest {
     private static ArrayList<ResourceCard> resourceCards;
@@ -69,56 +63,19 @@ class PlayerTurnPlayStateTest {
         gameController = new GameController(game);
         ServerController.model.GAME_CONTROLLERS.put(lobbyUUID, gameController);
 
-        client1 = new NetworkSession(gameController) {
-            @Override
-            protected Listener createListener(NetworkSession session) {
-                return new Listener(session, command -> {
-                });
-            }
-        };
-        client2 = new NetworkSession(gameController) {
-            @Override
-            protected Listener createListener(NetworkSession session) {
-                return new Listener(session, command -> {
-                });
-            }
-        };
+        client1 = createNetworkSessionStub(gameController);
+        client2 = createNetworkSessionStub(gameController);
 
         ServerController.activePlayers.put(client1, game.getPlayers().get(0));
         ServerController.activePlayers.put(client2, game.getPlayers().get(1));
-        gameController.getCurrentState().transition();
 
-        int i = 0;
-        for (var target : game.getPlayers()) {
-            target.placeCard(new GenericPair<>(0, 0), target.getCardsInHand().getFirst(), Side.FRONT);
-            target.addCardToHand(resourceCards.get(i));
-            i++;
-            target.addCardToHand(resourceCards.get(i));
-            target.addCardToHand(goldCards.get(i));
-            i++;
-        }
+        gameController.placeCard(client1, new GenericPair<>(0,0), game.getPlayers().get(0).getCardsInHand().getFirst().ID, Side.BACK);
+        gameController.placeCard(client2, new GenericPair<>(0,0), game.getPlayers().get(1).getCardsInHand().getFirst().ID, Side.BACK);
 
-
-        Map<InGamePlayer, ArrayList<ObjectiveCard>> objectivesMap = new HashMap<>();
-        ArrayList<ObjectiveCard> obj_a = new ArrayList<>();
-        obj_a.add(objectiveCards.getFirst());
-        obj_a.add(objectiveCards.get(1));
-
-        ArrayList<ObjectiveCard> obj_a2 = new ArrayList<>();
-        obj_a2.add(objectiveCards.get(2));
-        obj_a2.add(objectiveCards.get(3));
-
-        objectivesMap.put(game.getPlayers().getFirst(), obj_a);
-        objectivesMap.put(game.getPlayers().getLast(), obj_a2);
-
-        state = new ChooseObjectiveCardsState(gameController, game, objectivesMap);
-
-        for (var target : game.getPlayers()) {
-            state.pickObjective(target, objectivesMap.get(target).getFirst());
-        }
-
+        gameController.pickObjective(client1, ((ServerControllerTest.VirtualClientImpl) client1.getListener().getVirtualClient()).myClientController.receivedObjectiveIDs.getFirst());
+        gameController.pickObjective(client2, ((ServerControllerTest.VirtualClientImpl) client2.getListener().getVirtualClient()).myClientController.receivedObjectiveIDs.getFirst());
     }
-
+/*
     @Test
     void correctTransitionTest() throws Exception {
         gameController.getCurrentState().placeCard(game.getPlayers().getFirst(), new GenericPair<>(1, 1), game.getPlayers().getFirst().getCardsInHand().getFirst(), Side.FRONT);
@@ -133,9 +90,7 @@ class PlayerTurnPlayStateTest {
 
     @Test
     void transitionFromDisconnectedPlayerTest() throws Exception {
-        //FIXME: unused?
-        //PlayerTurnPlayState state1 = new PlayerTurnPlayState(game, state.currentPlayer, 0);
         gameController.getCurrentState().playerDisconnected(game.getCurrentPlayer());
         assertInstanceOf(PlayerTurnDrawState.class, gameController.getCurrentState());
-    }
+    }*/
 }
